deploy: QuantumPL/site@6f04b5f1b10674acfb4c51568efac04cc9d44759

--- a/publication/index.html
+++ b/publication/index.html
@@ -4916,6 +4916,39 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2007">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Selinger2007/>Dagger Compact Closed Categories and Completely Positive Maps (Extended Abstract)</a>
+</div>
+<a href=/bib/publication/Selinger2007/ class=summary-link>
+<div class=article-style>
+Dagger compact closed categories were recently introduced by Abramsky and Coecke, under the name &ldquo;strongly compact closed …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.mscs.dal.ca/~selinger/papers/dagger.pdf target=_blank rel=noopener>
+PDF
+</a>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Selinger2007/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/j.entcs.2006.12.018 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2006">
 <div class="media stream-item">
 <div class=media-body>
