--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -350,6 +350,12 @@ Measurement-based quantum computation has emerged from the physics community as 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Selinger2007/>Dagger Compact Closed Categories and Completely Positive Maps (Extended Abstract)</a></h2>
+<div class=article-style>
+Dagger compact closed categories were recently introduced by Abramsky and Coecke, under the name "strongly compact closed categories", as an axiomatic framework for quantum mechanics. We present a graphical language for dagger compact closed …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Ruediger2007/>Quantum Programming Languages: An Introductory Overview</a></h2>
 <div class=article-style>
 The present article gives an introductory overview of the novel field of quantum programming languages (QPLs) from a pragmatic perspective. First, after a short summary of basic notations of quantum mechanics, some of the goals and design issues are …
