deploy: QuantumPL/site@f599b2bced916df5785e65bebc8c502f5b2790aa

--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -260,6 +260,12 @@ We derive a variant of quantum Hoare logic (QHL), called applied quantum Hoare l
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Huot2019a/>Quantum channels as a categorical completion</a></h2>
+<div class=article-style>
+We propose a categorical foundation for the connection between pure and mixed states in quantum information and quantum computation. The foundation is based on distributive monoidal categories. First, we prove that the category of all quantum …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></h2>
 <div class=article-style>
 Quantum Hoare logic allows us to reason about quantum programs. We present an extension of quantum Hoare logic that introduces "ghost variables" to extend the expressive power of pre-/postconditions. Ghost variables are variables that do not actually …
