--- a/publication/Heunen2019/index.html
+++ b/publication/Heunen2019/index.html
@@ -187,11 +187,11 @@ Book
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Huot2019a/>Quantum channels as a categorical completion</a></li>
 <li><a href=/bib/publication/Huot2019/>Universal Properties in Quantum Theory</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Bordg2021/>Certified Quantum Computation in Isabelle/HOL</a></li>
 <li><a href=/bib/publication/Vandewetering2020/>ZX-calculus for the working quantum computer scientist</a></li>
-<li><a href=/bib/publication/Rennela2020/>Classical Control, Quantum Circuits and Linear Logic in Enriched Category Theory</a></li>
 </ul>
 </div>
 </div>
