--- a/publication/index.html
+++ b/publication/index.html
@@ -2385,6 +2385,40 @@ arXiv
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Huot2019a/>Quantum channels as a categorical completion</a>
+</div>
+<a href=/bib/publication/Huot2019a/ class=summary-link>
+<div class=article-style>
+We propose a categorical foundation for the connection between pure and mixed states in quantum information and quantum computation. …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Mathieu-Huot/>Mathieu Huot</a></span>, <span>
+<a href=/bib/author/Sam-Staton/>Sam Staton</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Huot2019a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/LICS.2019.8785700 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1904.09600 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Zhou2019/>An Applied Quantum Hoare Logic</a>
 </div>
 <a href=/bib/publication/Zhou2019/ class=summary-link>
