deploy: QuantumPL/site@e0a21506b2fabd3bf5a6112cff6843b0294af456

--- a/404.html
+++ b/404.html
@@ -128,10 +128,10 @@
 <li><a href=/bib/event/pldi22/>Quantum at PLDI 2022</a></li>
 <li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
+<li><a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a></li>
 <li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Yan2022/>On Incorrectness Logic for Quantum Programs</a></li>
-<li><a href=/bib/publication/Tao2022/>Giallar: Push-button Verification for the Qiskit Quantum Compiler</a></li>
-<li><a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a></li>
 <li><a href=/bib/publication/Peng2022a/>A Formally Certified End-to-End Implementation of Shor's Factorization Algorithm</a></li>
 </ul>
 </div>
