--- a/index.html
+++ b/index.html
@@ -158,6 +158,34 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Runzhou-Tao/>Runzhou Tao</a></span>, <span>
+<a href=/bib/author/Yunong-Shi/>Yunong Shi</a></span>, <span>
+<a href=/bib/author/Jianan-Yao/>Jianan Yao</a></span>, <span>
+<a href=/bib/author/Xupeng-Li/>Xupeng Li</a></span>, <span>
+<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
+<a href=/bib/author/Andrew-W.-Cross/>Andrew W. Cross</a></span>, <span>
+<a href=/bib/author/Frederic-T.-Chong/>Frederic T. Chong</a></span>, <span>
+<a href=/bib/author/Ronghui-Gu/>Ronghui Gu</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a>.
+<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Tao2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523431 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2205.00661 target=_blank rel=noopener>
+arXiv
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Mingkuan-Xu/>Mingkuan Xu</a></span>, <span>
 <a href=/bib/author/Zikun-Li/>Zikun Li</a></span>, <span>
 <a href=/bib/author/Oded-Padon/>Oded Padon</a></span>, <span>
@@ -195,19 +223,22 @@ URL
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
-<a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
-<a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
-<a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
-<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+<a href=/bib/author/Yuxiang-Peng/>Yuxiang Peng</a></span>, <span>
+<a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>, <span>
+<a href=/bib/author/Xiaodi-Wu/>Xiaodi Wu</a></span>
 </span>
 (2022).
-<a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a>.
+<a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a>.
+<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
 <p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Peng2022/cite.bib>
 Cite
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13041 target=_blank rel=noopener>
-arXiv
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523713 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
+arXiv (Extended Version)
 </a>
 </p>
 </div>
@@ -221,12 +252,12 @@ arXiv
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
 </span>
 (2022).
-<a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a>.
+<a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a>.
 <p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022a/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022/cite.bib>
 Cite
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13039 target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13041 target=_blank rel=noopener>
 arXiv
 </a>
 </p>
@@ -254,31 +285,6 @@ arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR/tree/main/examples/shor target=_blank rel=noopener>
 URL
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Runzhou-Tao/>Runzhou Tao</a></span>, <span>
-<a href=/bib/author/Yunong-Shi/>Yunong Shi</a></span>, <span>
-<a href=/bib/author/Jianan-Yao/>Jianan Yao</a></span>, <span>
-<a href=/bib/author/Xupeng-Li/>Xupeng Li</a></span>, <span>
-<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
-<a href=/bib/author/Andrew-W.-Cross/>Andrew W. Cross</a></span>, <span>
-<a href=/bib/author/Frederic-T.-Chong/>Frederic T. Chong</a></span>, <span>
-<a href=/bib/author/Ronghui-Gu/>Ronghui Gu</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Tao2022/>Giallar: Push-button Verification for the Qiskit Quantum Compiler</a>.
-<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Tao2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1908.08963 target=_blank rel=noopener>
-arXiv
 </a>
 </p>
 </div>
@@ -376,14 +382,14 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
-<a href=/bib/tag/formal-verification/ style=font-size:.8080527965636721rem>formal verification</a>
-<a href=/bib/tag/hoare-logic/ style=font-size:1.071969007216739rem>hoare logic</a>
-<a href=/bib/tag/programming-languages/ style=font-size:1.1453992627748137rem>programming languages</a>
+<a href=/bib/tag/formal-verification/ style=font-size:.8037450165699209rem>formal verification</a>
+<a href=/bib/tag/hoare-logic/ style=font-size:1.0571395840223141rem>hoare logic</a>
+<a href=/bib/tag/programming-languages/ style=font-size:1.127642368974455rem>programming languages</a>
 <a href=/bib/tag/proto-quipper-m/ style=font-size:.7rem>proto-quipper-m</a>
-<a href=/bib/tag/quantum-computation/ style=font-size:1.21338506051086rem>quantum computation</a>
-<a href=/bib/tag/quantum-computing/ style=font-size:1.9717704357396117rem>quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.071969007216739rem>quantum programming</a>
-<a href=/bib/tag/quantum-programming-languages/ style=font-size:.9047093167558622rem>quantum programming languages</a>
+<a href=/bib/tag/quantum-computation/ style=font-size:1.1929177522773682rem>quantum computation</a>
+<a href=/bib/tag/quantum-computing/ style=font-size:1.974467354517758rem>quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.0571395840223141rem>quantum programming</a>
+<a href=/bib/tag/quantum-programming-languages/ style=font-size:.8965480962479252rem>quantum programming languages</a>
 </div>
 </div>
 </div>
