--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -122,21 +122,21 @@
 </div>
 <div class=universal-wrapper>
 <div>
-<h2><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></h2>
-<div class=article-style>
-Existing quantum compilers optimize quantum circuits by applying circuit transformations designed by experts. This approach requires significant manual effort to design and implement circuit transformations for different quantum devices, which use …
-</div>
-</div>
-<div>
 <h2><a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a></h2>
 <div class=article-style>
 We investigate the algebraic reasoning of quantum programs inspired by the success of classical program analysis based on Kleene algebra. One prominent example of such is the famous Kleene Algebra with Tests (KAT), which has furnished both …
 </div>
 </div>
 <div>
-<h2><a href=/bib/publication/Tao2022/>Giallar: Push-button Verification for the Qiskit Quantum Compiler</a></h2>
+<h2><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></h2>
 <div class=article-style>
 This paper presents Giallar, a fully-automated verification toolkit for quantum compilers. Giallar requires no manual specifications, invariants, or proofs, and can automatically verify that a compiler pass preserves the semantics of quantum …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></h2>
+<div class=article-style>
+Existing quantum compilers optimize quantum circuits by applying circuit transformations designed by experts. This approach requires significant manual effort to design and implement circuit transformations for different quantum devices, which use …
 </div>
 </div>
 <div>
