--- a/publication/Li2020/index.html
+++ b/publication/Li2020/index.html
@@ -186,10 +186,10 @@ Journal article
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Mccaskey2021/>Extending C++ for Heterogeneous Quantum-Classical Computing</a></li>
+<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
+<li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 <li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 <li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
-<li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
-<li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
 </ul>
 </div>
 </div>
