--- a/publication/index.html
+++ b/publication/index.html
@@ -242,6 +242,81 @@ URL
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a>
+</div>
+<a href=/bib/publication/Tao2022/ class=summary-link>
+<div class=article-style>
+This paper presents Giallar, a fully-automated verification toolkit for quantum compilers. Giallar requires no manual specifications, …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Runzhou-Tao/>Runzhou Tao</a></span>, <span>
+<a href=/bib/author/Yunong-Shi/>Yunong Shi</a></span>, <span>
+<a href=/bib/author/Jianan-Yao/>Jianan Yao</a></span>, <span>
+<a href=/bib/author/Xupeng-Li/>Xupeng Li</a></span>, <span>
+<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
+<a href=/bib/author/Andrew-W.-Cross/>Andrew W. Cross</a></span>, <span>
+<a href=/bib/author/Frederic-T.-Chong/>Frederic T. Chong</a></span>, <span>
+<a href=/bib/author/Ronghui-Gu/>Ronghui Gu</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Tao2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523431 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2205.00661 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a>
+</div>
+<a href=/bib/publication/Peng2022/ class=summary-link>
+<div class=article-style>
+We investigate the algebraic reasoning of quantum programs inspired by the success of classical program analysis based on Kleene …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Yuxiang-Peng/>Yuxiang Peng</a></span>, <span>
+<a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>, <span>
+<a href=/bib/author/Xiaodi-Wu/>Xiaodi Wu</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Peng2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523713 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
+arXiv (Extended Version)
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2022">
 <div class="media stream-item">
 <div class=media-body>
@@ -300,78 +375,6 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3527316 target=_blank rel=noopener>
 DOI
-</a>
-</div>
-</div>
-<div class=ml-3>
-</div>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Tao2022/>Giallar: Push-button Verification for the Qiskit Quantum Compiler</a>
-</div>
-<a href=/bib/publication/Tao2022/ class=summary-link>
-<div class=article-style>
-This paper presents Giallar, a fully-automated verification toolkit for quantum compilers. Giallar requires no manual specifications, …
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-<a href=/bib/author/Runzhou-Tao/>Runzhou Tao</a></span>, <span>
-<a href=/bib/author/Yunong-Shi/>Yunong Shi</a></span>, <span>
-<a href=/bib/author/Jianan-Yao/>Jianan Yao</a></span>, <span>
-<a href=/bib/author/Xupeng-Li/>Xupeng Li</a></span>, <span>
-<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
-<a href=/bib/author/Andrew-W.-Cross/>Andrew W. Cross</a></span>, <span>
-<a href=/bib/author/Frederic-T.-Chong/>Frederic T. Chong</a></span>, <span>
-<a href=/bib/author/Ronghui-Gu/>Ronghui Gu</a></span>
-</div>
-</div>
-<div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Tao2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1908.08963 target=_blank rel=noopener>
-arXiv
-</a>
-</div>
-</div>
-<div class=ml-3>
-</div>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a>
-</div>
-<a href=/bib/publication/Peng2022/ class=summary-link>
-<div class=article-style>
-We investigate the algebraic reasoning of quantum programs inspired by the success of classical program analysis based on Kleene …
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-<a href=/bib/author/Yuxiang-Peng/>Yuxiang Peng</a></span>, <span>
-<a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>, <span>
-<a href=/bib/author/Xiaodi-Wu/>Xiaodi Wu</a></span>
-</div>
-</div>
-<div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Peng2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523713 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
-arXiv
 </a>
 </div>
 </div>
