--- a/publication/Mccaskey2021/index.html
+++ b/publication/Mccaskey2021/index.html
@@ -189,9 +189,9 @@ Journal article
 <ul>
 <li><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></li>
 <li><a href=/bib/publication/Li2020/>Projection-Based Runtime Assertions for Testing and Debugging Quantum Programs</a></li>
+<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
+<li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 <li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
-<li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
-<li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 </ul>
 </div>
 </div>
