--- a/publication/Rand2021/index.html
+++ b/publication/Rand2021/index.html
@@ -187,8 +187,8 @@ Conference paper
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
-<li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
-<li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
+<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
+<li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 </ul>
 </div>
 </div>
