--- a/publication/Xu2022/index.html
+++ b/publication/Xu2022/index.html
@@ -190,6 +190,20 @@ Conference paper
 <div class=space-below></div>
 <div class=article-style><p>PLDI &lsquo;22. Previously known as Quanto. To appear at PLDI 2022.</p>
 </div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
+<a class="badge badge-light" href=/bib/tag/superoptimization/>superoptimization</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
+<li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
+<li><a href=/bib/publication/Kong2021/>On the Impact of Affine Loop Transformations in Qubit Allocation</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
