deploy: QuantumPL/site@adb0f1c19fa1a972ba7b9458370cc8b0a2d32298

--- a/publication/Chardonnet2021/index.html
+++ b/publication/Chardonnet2021/index.html
@@ -140,7 +140,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://hal.archives-ouvertes.fr/hal-03154573/ target=_blank rel=noopener>
-URL (full version)
+HAL
 </a>
 </div>
 </div>
@@ -174,7 +174,8 @@ Conference paper
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>See full version on HAL.</p>
+</div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/quantum-computation/>quantum computation</a>
 <a class="badge badge-light" href=/bib/tag/linear-logic/>linear logic</a>
