--- a/publication/Peng2022/index.html
+++ b/publication/Peng2022/index.html
@@ -140,7 +140,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
-arXiv (Extended Version)
+arXiv
 </a>
 </div>
 </div>
