--- a/publication/Unruh2019/index.html
+++ b/publication/Unruh2019/index.html
@@ -137,6 +137,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1145/3290346 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/1802.03188 target=_blank rel=noopener>
+arXiv
+</a>
 </div>
 </div>
 <div class=article-container>
@@ -169,7 +172,7 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>POPL &lsquo;19</p>
+<div class=article-style><p>POPL &lsquo;19. See extended version on arXiv.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/formal-verification/>formal verification</a>
