--- a/publication/Yuan2022/index.html
+++ b/publication/Yuan2022/index.html
@@ -139,11 +139,11 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1145/3498691 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2205.02287 target=_blank rel=noopener>
+arXiv
+</a>
 <a class="btn btn-outline-primary btn-page-header" href=https://github.com/psg-mit/twist-popl22 target=_blank rel=noopener>
 URL
-</a>
-<a class="btn btn-outline-primary btn-page-header" href=/bib/publication/Yuan2022/appendix.pdf>
-Appendix
 </a>
 </div>
 </div>
@@ -177,7 +177,7 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>POPL &lsquo;22. Also see <a href="https://dl.acm.org/action/downloadSupplement?doi=10.1145%2F3498691&file=popl22main-p167-p-archive.zip" target=_blank rel=noopener>the associated appendix</a>.</p>
+<div class=article-style><p>POPL &lsquo;22. The extended version on arXiv includes the appendix and differs from ACM Proceedings in that it includes a more refined comparison to prior work, specifically in Sections 3.5 and 9.6.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/entanglement/>entanglement</a>
