--- a/publication/index.html
+++ b/publication/index.html
@@ -309,7 +309,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
-arXiv (Extended Version)
+arXiv
 </a>
 </div>
 </div>
@@ -544,11 +544,11 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498691 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2205.02287 target=_blank rel=noopener>
+arXiv
+</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/psg-mit/twist-popl22 target=_blank rel=noopener>
 URL
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=/bib/publication/Yuan2022/appendix.pdf>
-Appendix
 </a>
 </div>
 </div>
@@ -585,7 +585,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.13347 target=_blank rel=noopener>
-arXiv (extended version)
+arXiv
 </a>
 </div>
 </div>
@@ -1144,7 +1144,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://hal.archives-ouvertes.fr/hal-03154573/ target=_blank rel=noopener>
-URL (full version)
+HAL
 </a>
 </div>
 </div>
@@ -1361,9 +1361,9 @@ URL
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Mccaskey2021/>Extending C++ for Heterogeneous Quantum-Classical Computing</a>
+<a href=/bib/publication/McCaskey2021/>Extending C++ for Heterogeneous Quantum-Classical Computing</a>
 </div>
-<a href=/bib/publication/Mccaskey2021/ class=summary-link>
+<a href=/bib/publication/McCaskey2021/ class=summary-link>
 <div class=article-style>
 We present qcor—a language extension to C++ and compiler implementation that enables heterogeneous quantum-classical programming, …
 </div>
@@ -1380,7 +1380,7 @@ We present qcor—a language extension to C++ and compiler implementation that e
 </div>
 </div>
 <div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Mccaskey2021/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/McCaskey2021/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3462670 target=_blank rel=noopener>
@@ -1562,7 +1562,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2003.05841 target=_blank rel=noopener>
-arXiv (extended version)
+arXiv
 </a>
 </div>
 </div>
@@ -1630,7 +1630,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1912.02250 target=_blank rel=noopener>
-arXiv (with appendix)
+arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR target=_blank rel=noopener>
 URL
@@ -2832,6 +2832,9 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3290346 target=_blank rel=noopener>
 DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1802.03188 target=_blank rel=noopener>
+arXiv
 </a>
 </div>
 </div>
@@ -5058,9 +5061,9 @@ arXiv
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Dhondt2006/>Quantum Weakest Preconditions</a>
+<a href=/bib/publication/DHondt2006/>Quantum Weakest Preconditions</a>
 </div>
-<a href=/bib/publication/Dhondt2006/ class=summary-link>
+<a href=/bib/publication/DHondt2006/ class=summary-link>
 <div class=article-style>
 We develop a notion of predicate transformer and, in particular, the weakest precondition, appropriate for quantum computation. We show …
 </div>
@@ -5076,7 +5079,7 @@ We develop a notion of predicate transformer and, in particular, the weakest pre
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.cs.mcgill.ca/~prakash/Pubs/weakest_mscs.pdf target=_blank rel=noopener>
 PDF
 </a>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Dhondt2006/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/DHondt2006/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/S0960129506005251 target=_blank rel=noopener>
