--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
-arXiv (Extended Version)
+arXiv
 </a>
 </p>
 </div>
