--- a/publication/Chareton2021/index.html
+++ b/publication/Chareton2021/index.html
@@ -142,7 +142,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2003.05841 target=_blank rel=noopener>
-arXiv (extended version)
+arXiv
 </a>
 </div>
 </div>
@@ -176,7 +176,7 @@ Conference paper
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>See extended version for additional technical material.</p>
+<div class=article-style><p>See extended version on arXiv for additional technical material.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/deductive-verification/>deductive verification</a>
