--- a/publication/Hietala2021/index.html
+++ b/publication/Hietala2021/index.html
@@ -142,7 +142,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/1912.02250 target=_blank rel=noopener>
-arXiv (with appendix)
+arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://github.com/inQWIRE/SQIR target=_blank rel=noopener>
 URL
@@ -179,7 +179,7 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>POPL &lsquo;21</p>
+<div class=article-style><p>POPL &lsquo;21. See arXiv version for full paper with appendix.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/programming-languages/>programming languages</a>
