--- a/publication/Jia2022/index.html
+++ b/publication/Jia2022/index.html
@@ -142,7 +142,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2107.13347 target=_blank rel=noopener>
-arXiv (extended version)
+arXiv
 </a>
 </div>
 </div>
@@ -176,7 +176,7 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>POPL &lsquo;22</p>
+<div class=article-style><p>POPL &lsquo;22. See extended version on arXiv.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/semantics/>semantics</a>
