--- a/publication/Xu2022/index.html
+++ b/publication/Xu2022/index.html
@@ -150,7 +150,7 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1145/3519939.3523433 target=_blank rel=noopener>
 DOI
 </a>
-<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2111.11387 target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2204.09033 target=_blank rel=noopener>
 arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://github.com/quantum-compiler/quartz target=_blank rel=noopener>
@@ -188,7 +188,7 @@ Conference paper
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>PLDI &lsquo;22. Previously known as Quanto. To appear at PLDI 2022.</p>
+<div class=article-style><p>PLDI &lsquo;22. Previously known as Quanto, arXiv:<a href=https://arxiv.org/abs/2111.11387 target=_blank rel=noopener>2111.11387</a>. To appear at PLDI 2022.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
