--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <div class=col-12>
 <center>
 <p>Welcome to <em>Quantum Programming Languages & Verification Bibliography</em>.</p>
-<p>Our goal is to provide <a href=/bib/about>canonical bibentries</a> in <a href=https://en.wikipedia.org/wiki/BibTeX target=_blank rel=noopener>BibTeX</a> format (<a href=https://ctan.org/pkg/biblatex target=_blank rel=noopener>BibLaTeX</a> support is <a href=https://github.com/QuantumPL/bib/issues/6 target=_blank rel=noopener>coming</a>).</p>
+<p>Our goal is to provide <a href=/bib/about>canonical bibentries</a> in <a href=https://raw.githubusercontent.com/QuantumPL/bib/main/bbt.bib target=_blank rel=noopener>BibTeX</a> and <a href=https://raw.githubusercontent.com/QuantumPL/bib/main/biblatex.bib target=_blank rel=noopener>BibLaTeX</a> formats.</p>
 <p>Please <a href=https://github.com/QuantumPL/bib target=_blank rel=noopener>file issues/send PRs</a>, if you find any mistakes or missing entries.</p>
 <ul class=cta-group>
 <li>
