deploy: QuantumPL/site@e5978c3a7c20d0dad954cfd668277e96ad326633

--- a/publication/DalLago2017/index.html
+++ b/publication/DalLago2017/index.html
@@ -191,7 +191,7 @@ Conference paper
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
 <li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
 <li><a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a></li>
-<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
+<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 </ul>
 </div>
 </div>
