--- a/publication/Danos2007/index.html
+++ b/publication/Danos2007/index.html
@@ -186,11 +186,11 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Yan2022/>On Incorrectness Logic for Quantum Programs</a></li>
 <li><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></li>
 <li><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></li>
 <li><a href=/bib/publication/Fu2020a/>A Tutorial Introduction to Quantum Circuit Programming in Dependently Typed Proto-Quipper</a></li>
-<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 </ul>
 </div>
 </div>
