--- a/publication/Paolini2017/index.html
+++ b/publication/Paolini2017/index.html
@@ -181,9 +181,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Paykin2017/>QWIRE: A Core Language for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Yan2022/>On Incorrectness Logic for Quantum Programs</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Rennela2018/>Classical Control and Quantum Circuits in Enriched Category Theory</a></li>
 </ul>
 </div>
 </div>
