--- a/publication/Selinger2007/index.html
+++ b/publication/Selinger2007/index.html
@@ -184,10 +184,10 @@ Journal article
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
+<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 <li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 <li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
-<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 </ul>
 </div>
 </div>
