--- a/publication/Singhal2021a/index.html
+++ b/publication/Singhal2021a/index.html
@@ -192,9 +192,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
+<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
-<li><a href=/bib/publication/Rand2019a/>Formal Verification vs. Quantum Uncertainty</a></li>
 </ul>
 </div>
 </div>
