--- a/publication/Svore2018/index.html
+++ b/publication/Svore2018/index.html
@@ -193,9 +193,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></li>
 <li><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></li>
+<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 <li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
-<li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 </ul>
 </div>
 </div>
