deploy: QuantumPL/site@ae7267b7f4ba72b5efcea4a86d1faf3c4ce02421

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2022/cite.bib>
 Cite
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2206.03532 target=_blank rel=noopener>
+arXiv
+</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/q-algol/ target=_blank rel=noopener>
 URL
 </a>
