--- a/publication/Singhal2022/index.html
+++ b/publication/Singhal2022/index.html
@@ -137,6 +137,9 @@ June 2022
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Singhal2022/cite.bib>
 Cite
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2206.03532 target=_blank rel=noopener>
+arXiv
+</a>
 <a class="btn btn-outline-primary btn-page-header" href=https://ks.cs.uchicago.edu/publication/q-algol/ target=_blank rel=noopener>
 URL
 </a>
