--- a/publication/index.html
+++ b/publication/index.html
@@ -217,6 +217,9 @@ Q# is a standalone domain-specific programming language from Microsoft for writi
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2022/cite.bib>
 Cite
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2206.03532 target=_blank rel=noopener>
+arXiv
+</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/q-algol/ target=_blank rel=noopener>
 URL
 </a>
