--- a/publication/Singhal2021/index.html
+++ b/publication/Singhal2021/index.html
@@ -172,7 +172,8 @@ Conference paper
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>See also: [<a href=../Singhal2022>Singhal2022</a>]</p>
+</div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
 <a class="badge badge-light" href=/bib/tag/quantum-computation/>quantum computation</a>
